merged code